# virgil

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: python-package.yml
src/virgil/: cli.py
src/virgil/commands/: config.py  list.py
src/virgil/core/: models.py
tests/: test_distributions.py
