[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100
py_version = 39
skip_gitignore = true
atomic = true

[tool.pytest]
minversion = "6.0"
addopts = "--cov=virgil"

[tool.coverage.run]
branch = true
source = ["virgil"]
omit = ["src/virgil/__main__.py"]

[tool.mypy]
warn_return_any = true
check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# Multiple ignores need to exist
# for older python compatibility
[[tool.mypy.overrides]]
module = "virgil.core.models"
warn_unused_ignores = false
